--- a/tests/data/mlwh_pb_runs/README
+++ b/tests/data/mlwh_pb_runs/README
@@ -2,6 +2,7 @@ This set of mlwh fixtures contains data for runs TRACTION-RUN-{92,525,1140,1162}
 
 TRACTION-RUN-92
 Wells {A,B,C,D}1, plate_number undefined
+D1 has 40 samples, the rest have one sample each
 
 TRACTION-RUN-525
 Well A1 only, demultiplexed, pac_bio_run_well_metrics data only
